compute single matter cl (Limber)

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ python_requires = >=3.6
 install_requires =
     numpy
     pyccl
-    glass>=2022.3.11
+    glass
 packages = glass
 
 [options.extras_require]
